added SiteAdapter, SiteMemStore, SiteStore

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="button_createSite">Create Site</string>
     <string name="menu_addSite">Add</string>
     <string name="hint_SiteName">Site Name</string>
+    <string name="menu_cancelSite">Cancel</string>
 </resources>
