--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,9 @@
     <string name="hint_siteDescription">Site Description</string>
     <string name="menu_cancelSite">Cancel</string>
     <string name="enter_site_name"> Please enter a Site Name </string>
+    <string name="menu_logout">Logout</string>
+    <string name="action_settings">Settings</string>
+    <string name="button_addImage"> Add Image </string>
+    <string name="select_site_image">Select Site Image</string>
+    <string name="change_site_image">Change placemark image</string>
 </resources>
