--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="change_site_image">Change placemark image</string>
     <string name="button_location">Set Location</string>
     <string name="title_activity_maps">Map</string>
+    <string name="menu_deleteSite">Delete</string>
 </resources>
