--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="button_location">Set Location</string>
     <string name="title_activity_maps">Map</string>
     <string name="menu_deleteSite">Delete</string>
+    <string name="title_activity_site_maps">Map of all Sites</string>
 </resources>
