implemented current phone location

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,7 @@
     <string name="menu_deleteSite">Delete</string>
     <string name="title_activity_site_maps">Map of all Sites</string>
     <string name="menu_saveSite">Save</string>
+    <string name="title_activity_site_list">Sites</string>
+    <string name="title_activity_site">Site</string>
+    <string name="title_activity_edit_location">Site</string>
 </resources>
