--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,10 +11,14 @@
     <string name="action_settings">Settings</string>
     <string name="button_addImage">Add Image</string>
     <string name="select_site_image">Select Site Image</string>
-    <string name="change_site_image">Change placemark image</string>
+    <string name="change_site_image">Change Site image</string>
     <string name="button_location">Set Location</string>
     <string name="title_activity_maps">Map</string>
     <string name="menu_deleteSite">Delete</string>
     <string name="title_activity_site_maps">Map of all Sites</string>
     <string name="menu_saveSite">Save</string>
+    <string name="title_activity_site_list">Sites</string>
+    <string name="title_activity_site">Site</string>
+    <string name="title_activity_edit_location">SiteLocation</string>
+    <string name="title_activity_settings">Settings</string>
 </resources>
