--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,9 @@
     <string name="title_activity_site">Site</string>
     <string name="title_activity_edit_location">SiteLocation</string>
     <string name="title_activity_settings">Settings</string>
+    <string name="navigation_drawer_open">Open</string>
+    <string name="navigation_drawer_close">Close</string>
+    <string name="menu_settings">Settings</string>
+    <string name="menu_favourites">Favourites</string>
+    <string name="all_sites">All Sites</string>
 </resources>
